# F.P.L-IDE

./: .gitignore  CMakeLists.txt  README.md  main.cpp
logs/: recentFiles.json
src/Data/: Data.cpp  Data.h
src/Editor/: Editor.cpp  Editor.h
src/HorizontalLayout/: HorizontalLayout.cpp  HorizontalLayout.h
src/TextButton/: TextButton.cpp  TextButton.h
src/TextLabel/: TextLabel.cpp  TextLabel.h
src/VerticalLayout/: VerticalLayout.cpp  VerticalLayout.h
src/WindowManager/: WindowManager.cpp  WindowManager.h
